--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-alpaca-trade-api==2.3.0
-Flask==2.3.2  # For handling HTTP requests in Cloud Functions
+Flask==2.1.1
 google-cloud-secret-manager==2.7.2
-python-dotenv==1.0.0
+alpaca-trade-api==1.4.3
 yfinance==0.2.20
+python-dotenv==0.19.2
 pandas==1.5.3
+numpy==1.23.5
+requests==2.31.0
