--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,34 +1,34 @@
 steps:
-  # Step 1: Deploy the monthly_buy_hfeaFunction
-  # - name: 'gcr.io/cloud-builders/gcloud'
-  #   args:
-  #   - functions
-  #   - deploy
-  #   - monthly_buy_hfea  # The name of the Cloud Function for monthly buys
-  #   - --source=.
-  #   - --trigger-http
-  #   - --region=europe-west3
-  #   - --runtime=python310
-  #   - --timeout=540s
-  #   - --entry-point=monthly_buy_hfea  # Entry point function in your Python code
-  #   - --memory=256MB
-  #   - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  #Step 1: Deploy the monthly_buy_hfeaFunction
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - monthly_buy_hfea  # The name of the Cloud Function for monthly buys
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=monthly_buy_hfea  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-  # Step 2: Deploy the rebalance_hfeaFunction
-  # - name: 'gcr.io/cloud-builders/gcloud'
-  #   args:
-  #   - functions
-  #   - deploy
-  #   - rebalance_hfea  # The name of the Cloud Function for rebalancing
-  #   - --source=.
-  #   - --trigger-http
-  #   - --region=europe-west3
-  #   - --runtime=python310
-  #   - --timeout=540s
-  #   - --entry-point=rebalance_hfea  # Entry point function in your Python code
-  #   - --memory=256MB
-  #   - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  #Step 2: Deploy the rebalance_hfeaFunction
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - rebalance_hfea  # The name of the Cloud Function for rebalancing
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=rebalance_hfea  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
   # Step 3: Deploy the rebalance_hfeaFunction
@@ -84,7 +84,8 @@ steps:
       '--schedule', '0 19 3 * *',  
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_hfea',
       '--http-method', 'POST',
-      '--time-zone', 'UTC'
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3
     ]
 
   # Create Cloud Scheduler job for 'rebalance_hfea' function
@@ -94,7 +95,8 @@ steps:
       '--schedule', '0 19 3 1,4,7,10 *',  
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/rebalance_hfea',
       '--http-method', 'POST',
-      '--time-zone', 'UTC'
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3
     ]
 
   # Create Cloud Scheduler job for 'monthly_buy_spxl' function
@@ -104,7 +106,8 @@ steps:
       '--schedule', '0 19 3 * *',  
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/buy_spxl_above_200sma',
       '--http-method', 'POST',
-      '--time-zone', 'UTC'
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3
     ]
 
   # Create Cloud Scheduler job for 'buy_spxl_above_200sma' function
@@ -114,7 +117,8 @@ steps:
       '--schedule', '45,55 20 * * *',  
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/buy_spxl_above_200sma',
       '--http-method', 'POST',
-      '--time-zone', 'UTC'
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3
     ]
 
   # Create Cloud Scheduler job for 'sell_spxl_below_200sma' function
@@ -124,7 +128,8 @@ steps:
       '--schedule', '45,55 20 * * *',  
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/sell_spxl_below_200sma',
       '--http-method', 'POST',
-      '--time-zone', 'UTC'
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3
     ]
 
 options:
