--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask
-google-cloud-secret-manager
-alpaca-trade-api
+functions-framework==3.*
+alpaca-trade-api==2.3.0
+Flask==2.3.2  # For handling HTTP requests in Cloud Functions
+google-cloud-secret-manager==2.7.2
+python-dotenv==1.0.0
 yfinance
-python-dotenv
