--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -85,7 +85,8 @@ steps:
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_hfea',
       '--http-method', 'POST',
       '--time-zone', 'UTC',
-      '--location', 'europe-west3'
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
     ]
 
   # Create Cloud Scheduler job for 'rebalance_hfea' function
@@ -96,7 +97,8 @@ steps:
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/rebalance_hfea',
       '--http-method', 'POST',
       '--time-zone', 'UTC',
-      '--location', 'europe-west3'
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
     ]
 
   # Create Cloud Scheduler job for 'monthly_buy_spxl' function
@@ -107,7 +109,8 @@ steps:
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/buy_spxl_above_200sma',
       '--http-method', 'POST',
       '--time-zone', 'UTC',
-      '--location', 'europe-west3'
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
     ]
 
   # Create Cloud Scheduler job for 'buy_spxl_above_200sma' function
@@ -118,7 +121,8 @@ steps:
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/buy_spxl_above_200sma',
       '--http-method', 'POST',
       '--time-zone', 'UTC',
-      '--location', 'europe-west3'
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
     ]
 
   # Create Cloud Scheduler job for 'sell_spxl_below_200sma' function
@@ -129,7 +133,8 @@ steps:
       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/sell_spxl_below_200sma',
       '--http-method', 'POST',
       '--time-zone', 'UTC',
-      '--location', 'europe-west3'
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
     ]
 
 options:
