--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -164,7 +164,7 @@ steps:
       '--location', 'europe-west3',
       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
       '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}',
-      '--headers', 'Content-Type=application/json'
+      '--Content-Type','application/json',  # Correctly set the Content-Type
     ]
 
   # Cloud Scheduler Job for MSCI World Index (POST method with request body)
@@ -178,7 +178,7 @@ steps:
       '--location', 'europe-west3',
       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
       '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}',
-      '--headers', 'Content-Type=application/json'
+      '--Content-Type','application/json',  # Correctly set the Content-Type
     ]
 
 options:
