--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
 #     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-#   # Step 3: Deploy the rebalance_hfeaFunction
+#   # Step 3: Deploy the monthly_buy_spxl
 #   - name: 'gcr.io/cloud-builders/gcloud'
 #     args:
 #     - functions
@@ -46,23 +46,23 @@ steps:
 #     - --memory=256MB
 #     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
-#   # Step 4: Deploy the rebalance_hfeaFunction
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args:
-#     - functions
-#     - deploy
-#     - buy_spxl_above_200sma  # The name of the Cloud Function for rebalancing
-#     - --source=.
-#     - --trigger-http
-#     - --region=europe-west3
-#     - --runtime=python310
-#     - --timeout=540s
-#     - --entry-point=buy_spxl_above_200sma  # Entry point function in your Python code
-#     - --memory=256MB
-#     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  # Step 4: Deploy the buy_spxl_above_200sma
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - buy_spxl_above_200sma  # The name of the Cloud Function for rebalancing
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=buy_spxl_above_200sma  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-#   # Step 5: Deploy the rebalance_hfeaFunction
+#   # Step 5: Deploy the sell_spxl_below_200sma
 #   - name: 'gcr.io/cloud-builders/gcloud'
 #     args:
 #     - functions
@@ -153,31 +153,31 @@ steps:
 #       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
 #     ]
 
-  # Cloud Scheduler Job for S&P 500 Index (POST method with request body)
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'sp500_drop_alert',
-      '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
-      '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}',
-    ]
+  # # Cloud Scheduler Job for S&P 500 Index (POST method with request body)
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args: [
+  #     'scheduler', 'jobs', 'update', 'http', 'sp500_drop_alert',
+  #     '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
+  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
+  #     '--http-method', 'POST',
+  #     '--time-zone', 'America/New_York',
+  #     '--location', 'europe-west3',
+  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
+  #     '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}',
+  #   ]
 
-  # Cloud Scheduler Job for MSCI World Index (POST method with request body)
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'msci_drop_alert',
-      '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
-      '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}',
-    ]
+  # # Cloud Scheduler Job for MSCI World Index (POST method with request body)
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args: [
+  #     'scheduler', 'jobs', 'update', 'http', 'msci_drop_alert',
+  #     '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
+  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
+  #     '--http-method', 'POST',
+  #     '--time-zone', 'America/New_York',
+  #     '--location', 'europe-west3',
+  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
+  #     '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}',
+  #   ]
 
 options:
   logging: CLOUD_LOGGING_ONLY  # Send logs to Cloud Logging only
