--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -153,31 +153,31 @@ steps:
 #       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
 #     ]
 
-  # Cloud Scheduler Job for S&P 500 Index (POST method with request body)
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'sp500_drop_alert',
-      '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
-      '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}'
-    ]
+  # # Cloud Scheduler Job for S&P 500 Index (POST method with request body)
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args: [
+  #     'scheduler', 'jobs', 'update', 'http', 'sp500_drop_alert',
+  #     '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
+  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
+  #     '--http-method', 'POST',
+  #     '--time-zone', 'America/New_York',
+  #     '--location', 'europe-west3',
+  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
+  #     '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}'
+  #   ]
 
-  # Cloud Scheduler Job for MSCI World Index (POST method with request body)
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'msci_drop_alert',
-      '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
-      '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}'
-    ]
+  # # Cloud Scheduler Job for MSCI World Index (POST method with request body)
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args: [
+  #     'scheduler', 'jobs', 'update', 'http', 'msci_drop_alert',
+  #     '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
+  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
+  #     '--http-method', 'POST',
+  #     '--time-zone', 'America/New_York',
+  #     '--location', 'europe-west3',
+  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
+  #     '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}'
+  #   ]
 
 options:
   logging: CLOUD_LOGGING_ONLY  # Send logs to Cloud Logging only
